feat(nunjucks): complete Nunjucks architecture refactor

--- a/frontend/src/scss/abstracts/_mixins.scss
+++ b/frontend/src/scss/abstracts/_mixins.scss
@@ -113,6 +113,16 @@
   }
 }
 
+// Применяет стили только для устройств, поддерживающих hover.
+// @use: @include on-hover { ... }
+@mixin on-hover() {
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      @content;
+    }
+  }
+}
+
 // --------------------------------------------------------------------------
 // Генераторы CSS-фигур
 // --------------------------------------------------------------------------
