--- a/frontend/src/scss/components/_index.scss
+++ b/frontend/src/scss/components/_index.scss
@@ -5,3 +5,8 @@
 // в главном файле стилей app.scss.
 
 @forward "scroll-to-top";
+@forward "mobile-menu";
+@forward "modals";
+@forward "forms";
+@forward "video";
+@forward "accordion";
