--- a/frontend/src/views/components/_scroll-to-top.njk
+++ b/frontend/src/views/components/_scroll-to-top.njk
@@ -1,1 +1,6 @@
-<button id="scroll-to-top" class="btn-exit"></button>
+{#
+  Компонент "Кнопка наверх".
+  Подключается в основном макете.
+  Логика появления/исчезновения управляется через JS.
+#}
+<button id="scroll-to-top" class="btn-exit" aria-label="Вернуться наверх"></button>
