--- a/frontend/src/views/layouts/_default.njk
+++ b/frontend/src/views/layouts/_default.njk
@@ -1,3 +1,31 @@
+{#
+====================================================================================================
+_default.njk (v4.0 - На основе вашего кода)
+====================================================================================================
+
+Главный макет-обертка для СТАТИЧЕСКОЙ разработки.
+Использует прямое подключение к Vite Dev Server, как и требуется для нашего рабочего процесса.
+
+----------------------------------------------------------------------------------------------------
+ШПАРГАЛКА ПО NUNJUCKS
+----------------------------------------------------------------------------------------------------
+{% extends "./path/to/layout.njk" %}     # Наследование макета (должно быть первой строкой)
+{% block content %}{% endblock %}        # Определение блока для вставки контента
+{% include "../path/to/partial.njk" %}   # Вставка другого шаблона (партиала)
+{{ variable }}                           # Вывод переменной
+{# Это комментарий #}
+# Комментарий, который не попадет в HTML
+{% set myVar = "значение" %}
+# Установка переменной
+{% if user.loggedIn %}{% endif %}
+# Условные операторы
+{% for item in items %}{% endfor %}
+# Циклы
+{{ macro.myMacro(arg1, arg2) }}
+# Вызов макроса
+{{ site.url }}
+# Доступ к глобальным данным из data/site.json ==================================================================================================== #}
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -37,4 +65,3 @@
 
   </body>
 </html>
-{# ... шпаргалка остается без изменений ... #}
