--- a/frontend/src/views/pages/index.njk
+++ b/frontend/src/views/pages/index.njk
@@ -10,6 +10,12 @@
     <div style="padding: 40px; text-align: center; font-family: sans-serif;">
       <h1>🚀 Nunjucks-архитектура работает!</h1>
     </div>
+
+    {# Добавляем видео-компонент для теста #}
+    <div style="max-width: 800px; margin: 40px auto;">
+      {% include "../components/_video.njk" %}
+    </div>
+
   </main>
 
   {% include "../partials/_footer.njk" %}
